--- a/cron.yml
+++ b/cron.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install requests Pillow
+        pip install requests
 
     - name: Process added files
       run: |
@@ -39,7 +39,7 @@ jobs:
         title: "Automated Update: levels.json"
         body: "This pull request updates the levels.json file based on new uploads."
         labels: "automated update"
-        reviewers: "your-github-username"  # Replace with actual GitHub username
+        reviewers: "OmgRod"
 
     - name: Display PR Details
       if: ${{ steps.cpr.outputs.pull-request-number }}
