--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - 'uploads/**'
 
+permissions:  # Add these permissions to allow pushing and creating PRs
+  contents: write  # Required to push changes
+  pull-requests: write  # Required to create and manage PRs
+
 jobs:
   process-files:
     runs-on: ubuntu-latest
@@ -14,6 +18,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python environment
       uses: actions/setup-python@v4
@@ -32,7 +38,7 @@ jobs:
       id: cpr
       uses: peter-evans/create-pull-request@v7
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}  # Use GITHUB_TOKEN with correct permissions
         commit-message: "Update levels.json file"
         branch: "update-levels"
         delete-branch: true
