--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -23,13 +23,15 @@ jobs:
           git config user.name "OmgRod"
           git config user.email "89850217+OmgRod@users.noreply.github.com"
 
-      # Fetch and create/update the update-levels branch from main
-      - name: Fetch and Create Branch from main
+      # Create/update the update-levels branch from main
+      - name: Create/update update-levels branch from main
         run: |
           git fetch origin
-          git checkout -b update-levels origin/main
+          git checkout -b update-levels origin/main || git checkout update-levels
+          # Ensure we are on the correct branch
+          git pull origin update-levels || echo "Branch update-levels already exists"
 
-      # Modify levels.json (Example modification, you should modify this part)
+      # Modify levels.json (Example modification)
       - name: Modify levels.json
         run: |
           echo '{"level": "1", "name": "Level One"}' > levels.json
@@ -40,20 +42,10 @@ jobs:
         run: |
           git add levels.json
           git status  # Check the status to see what has been added
-          git commit -m "Update levels.json file"
+          git commit -m "Update levels.json file" || echo "No changes to commit"
           git log --oneline  # Check the last commit to ensure it's there
 
-      # Fetch remote updates for update-levels branch
-      - name: Fetch remote update-levels branch
-        run: |
-          git fetch origin update-levels
-
-      # Merge remote update-levels into the current branch
-      - name: Merge remote update-levels
-        run: |
-          git merge origin/update-levels --allow-unrelated-histories --no-edit
-
-      # Push the changes to the update-levels branch
+      # Push the changes to update-levels branch
       - name: Push changes to update-levels
         run: |
           git push origin update-levels
